--- a/index.html
+++ b/index.html
@@ -162,12 +162,16 @@
         <div style="text-align: center; display: block" class="container1">
             <div>
                 <h3>Schicken Sie uns jetzt eine E-Mail, um ein personalisiertes Angebot zu erhalten!</h3>
+                <p>Bitte senden Sie uns eine E-Mail mit den folgenden Daten:
+
+                    <b>Name, Telefonnummer, Art der Reinigung & Ihre Nachricht </b>
+                    </p>
 
             </div>
             <div  style="width: fit-content; height: fit-content; position: relative; left: 50%; transform: translateX(-50%);">
                 <a class="emailBtn box" style="color: black;  text-decoration: none; padding: 0%; margin: 0%;" href="mailto:info@topclean.at">
                     <div style="height: fit-content;"><img class="emailImg" src="resources/imgs/email-svgrepo-com.svg" alt=""></div>
-                    <div style="height: fit-content;"><h3 style="font-size: xx-large;">Email</h3></div>
+                    <div style="height: fit-content;"><h3 style="font-size: xx-large; font-weight: 60;">Email</h3></div>
                 </a>
             </div>
         </div>
