--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
                 <h3>Schicken Sie uns jetzt eine E-Mail, um ein personalisiertes Angebot zu erhalten!</h3>
                 <p>Bitte senden Sie uns eine E-Mail mit den folgenden Daten:
 
-                    <b>Name, Telefonnummer, Art der Reinigung & Ihre Nachricht </b>
+                    <b>Name:<br>
+                         Telefonnummer:<br> Art der Reinigung:<br>Ihre Nachricht: </b>
                     </p>
 
             </div>
