--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div style="text-align: center; display: block" class="container1">
             <div>
                 <h3>Schicken Sie uns jetzt eine E-Mail, um ein personalisiertes Angebot zu erhalten!</h3>
-                <p>Bitte senden Sie uns eine E-Mail mit den folgenden Daten:
+                <p>Bitte senden Sie uns eine E-Mail mit den folgenden Daten: <br>
 
                     <b>Name:<br>
                          Telefonnummer:<br> Art der Reinigung:<br>Ihre Nachricht: </b>
