--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div>
                 <h3>Schicken Sie uns jetzt eine E-Mail, um ein personalisiertes Angebot zu erhalten!</h3>
                 <p>Bitte senden Sie uns eine E-Mail mit den folgenden Daten: <br>
-                    <div style="text-align: left;">
+                    <div style="text-align: left; position: relative; left: 50%; transform: translateX(-50%);">
                         <b>Name:<br>
                             Telefonnummer:<br> Art der Reinigung:<br>Ihre Nachricht: </b>
                        </p>
