--- a/index.html
+++ b/index.html
@@ -159,21 +159,25 @@
 
     </div>
     <section id="contact" >
-        <div style="text-align: center; display: block" class="container1">
+        <div class="flexCol">
             <div>
-                <h3>Schicken Sie uns jetzt eine E-Mail, um ein personalisiertes Angebot zu erhalten!</h3>
-                <p>Bitte senden Sie uns eine E-Mail mit den folgenden Daten: <br>
-
-                    <b>Name:<br>
-                         Telefonnummer:<br> Art der Reinigung:<br>Ihre Nachricht: </b>
-                    </p>
-
+                <div><h3>Schicken Sie uns jetzt eine E-Mail, um ein personalisiertes Angebot zu erhalten!</h3></div>
             </div>
-            <div  style="width: fit-content; height: fit-content; position: relative; left: 50%; transform: translateX(-50%);">
-                <a class="emailBtn box" style="color: black;  text-decoration: none; padding: 0%; margin: 0%;" href="mailto:info@topclean.at">
-                    <div style="height: fit-content;"><img class="emailImg" src="resources/imgs/email-svgrepo-com.svg" alt=""></div>
-                    <div style="height: fit-content;"><h3 style="font-size: xx-large; font-weight: 60;">Email</h3></div>
-                </a>
+            <div>
+                <div><p>Schicken Sie uns jetzt eine E-Mail mit den folgenden Infos:</p></div>
+                <div>
+                    <div><ul style="text-align: left;">
+                        <li>Name</li>
+                        <li>Telefonnummer</li>
+                        <li>Art der Reinigung</li>
+                        <li>Ihre Nachricht</li>
+                    </ul></div>
+                    <div class="box">
+                        <img class="imgSmall" src="resources/imgs/email-unread-svgrepo-com.svg" alt="">
+                        <a style="text-decoration: none; color: black; font-size: larger;" href="mailto:info@topclean.at">Email senden</a>
+                    </div>
+                    
+                </div>
             </div>
         </div>
     </section>
@@ -431,6 +435,7 @@
         <p>&copy; 2024 Top Clean. Alle Rechte vorbehalten.</p> <p id="termsLink"><b>AGBs</b></p>
         <p>Icons von icons8 und Bilder von <a href="https://www.freepik.com/">Freepik</a> & <a
                 href="https://www.unsplash.com/">Unsplash</a></p>
+                <p>Webseite erstellt von <a href="jass2909.github.io"><u>Jasmeet Singh</u></a></p>
     </footer>
     <script>
         // Function to open terms and conditions popup
