--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     </ul></div>
                     <div class="box">
                         <img class="imgSmall" src="resources/imgs/email-unread-svgrepo-com.svg" alt="">
-                        <a style="text-decoration: none; color: black; font-size: larger;" href="mailto:info@topclean.at">Email senden</a>
+                        <a style="text-decoration: none; color: black; font-size: larger;" href="mailto:info@topclean1.at">Email senden</a>
                     </div>
                     
                 </div>
