--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
         <p>&copy; 2024 Top Clean. Alle Rechte vorbehalten.</p> <p id="termsLink"><b>AGBs</b></p>
         <p>Icons von icons8 und Bilder von <a href="https://www.freepik.com/">Freepik</a> & <a
                 href="https://www.unsplash.com/">Unsplash</a></p>
-                <p>Webseite erstellt von <a href="jass2909.github.io"><u>Jasmeet Singh</u></a></p>
+                <p>Webseite erstellt von <a href="https://www.jass2909.github.io"><u>Jasmeet Singh</u></a></p>
     </footer>
     <script>
         // Function to open terms and conditions popup
